k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gopro
  labels:
    name: gopro
    environment: base
    istio-injection: enabled
